video: fbdev: eink display driver for A13/EDP/TP65185 combo
Hacked up all together for simplicity, while researching how
it all works together.

Nothing to see, yet.

Signed-off-by: Ondrej Jirman <megous@megous.com>

--- a/drivers/video/fbdev/Makefile
+++ b/drivers/video/fbdev/Makefile
@@ -136,3 +136,5 @@ obj-$(CONFIG_FB_SIMPLE)           += simplefb.o
 
 # the test framebuffer is last
 obj-$(CONFIG_FB_VIRTUAL)          += vfb.o
+
+obj-$(CONFIG_FB_EINK)             += eink/
